test_regress/t/t_tagged_case.out
%Error-UNSUPPORTED: t/t_tagged_case.v:24:17: Unsupported: tagged union
   24 |   typedef union tagged {
      |                 ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_case.v:25:5: Unsupported: void (for tagged unions)
   25 |     void Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:30:17: Unsupported: tagged union
   30 |   typedef union tagged packed {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:31:5: Unsupported: void (for tagged unions)
   31 |     void          Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:39:17: Unsupported: tagged union
   39 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:40:5: Unsupported: void (for tagged unions)
   40 |     void        Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:46:17: Unsupported: tagged union
   46 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:50:11: Unsupported: tagged union
   50 |     union tagged {
      |           ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:60:17: Unsupported: tagged union
   60 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:61:5: Unsupported: void (for tagged unions)
   61 |     void    Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:66:17: Unsupported: tagged union
   66 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:67:5: Unsupported: void (for tagged unions)
   67 |     void      Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:75:17: Unsupported: tagged union
   75 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:76:5: Unsupported: void (for tagged unions)
   76 |     void      Invalid;
      |     ^~~~
%Warning-SHORTREAL: t/t_tagged_case.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_case.v:82:17: Unsupported: tagged union
   82 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:83:5: Unsupported: void (for tagged unions)
   83 |     void   Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:88:17: Unsupported: tagged union
   88 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:89:5: Unsupported: void (for tagged unions)
   89 |     void  Invalid;
      |     ^~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:94:17: Unsupported: tagged union
   94 |   typedef union tagged {
      |                 ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_case.v:95:5: Unsupported: void (for tagged unions)
   95 |     void  Invalid;
      |     ^~~~
%Error: t/t_tagged_case.v:116:9: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  116 |     v = tagged Invalid;
      |         ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:119:7: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  119 |       tagged Invalid : result = 1;
      |       ^~~~~~
%Error: t/t_tagged_case.v:122:161: syntax error, unexpected while
  122 |     do if ((result) !== (1)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",122, (result), (1), "result", "1"); $stop; end while(0);;
      |                                                                                                                                                                 ^~~~~
%Error: t/t_tagged_case.v:125:7: syntax error, unexpected '=', expecting '('
  125 |     v = tagged Valid (123);
      |       ^
%Error: t/t_tagged_case.v:127:14: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  127 |     case (v) matches
      |              ^~~~~~~
%Error: t/t_tagged_case.v:134:8: syntax error, unexpected '=', expecting '('
  134 |     wt = tagged Wide60 (60'hFEDCBA987654321);
      |        ^
%Error: t/t_tagged_case.v:136:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  136 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:144:8: syntax error, unexpected '=', expecting '('
  144 |     wt = tagged Wide90 (90'hDE_ADBEEFCA_FEBABE12_3456);
      |        ^
%Error: t/t_tagged_case.v:146:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  146 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:154:8: syntax error, unexpected '=', expecting '('
  154 |     wt = tagged Byte8NonZeroLSB (8'hA5);
      |        ^
%Error: t/t_tagged_case.v:156:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  156 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:163:8: syntax error, unexpected '=', expecting '('
  163 |     wt = tagged Word32LittleEndian (32'hDEADBEEF);
      |        ^
%Error: t/t_tagged_case.v:165:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  165 |     case (wt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:172:8: syntax error, unexpected '=', expecting '('
  172 |     at = tagged Arr '{10, 20, 30, 40};
      |        ^
%Error: t/t_tagged_case.v:174:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  174 |     case (at) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:182:11: syntax error, unexpected '=', expecting '('
  182 |     instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |           ^
%Error: t/t_tagged_case.v:184:18: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  184 |     case (instr) matches
      |                  ^~~~~~~
%Error: t/t_tagged_case.v:192:9: syntax error, unexpected '=', expecting '('
  192 |     cht = tagged Invalid;
      |         ^
%Error: t/t_tagged_case.v:194:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  194 |     case (cht) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:201:9: syntax error, unexpected =-then-new, expecting '('
  201 |     obj = new(42);
      |         ^
%Error: t/t_tagged_case.v:204:16: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  204 |     case (clt) matches
      |                ^~~~~~~
%Error: t/t_tagged_case.v:211:8: syntax error, unexpected '=', expecting '('
  211 |     rt = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:213:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  213 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:220:8: syntax error, unexpected '=', expecting '('
  220 |     rt = tagged RealVal (3.14159);
      |        ^
%Error: t/t_tagged_case.v:222:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  222 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:233:8: syntax error, unexpected '=', expecting '('
  233 |     rt = tagged ShortRealVal (2.5);
      |        ^
%Error: t/t_tagged_case.v:235:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  235 |     case (rt) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:246:8: syntax error, unexpected '=', expecting '('
  246 |     st = tagged Invalid;
      |        ^
%Error: t/t_tagged_case.v:248:15: syntax error, unexpected matches, expecting IDENTIFIER-for-type
  248 |     case (st) matches
      |               ^~~~~~~
%Error: t/t_tagged_case.v:254:8: syntax error, unexpected '=', expecting '('
  254 |     st = tagged StrVal ("hello");
      |        ^
%Error: Exiting due to
